<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".UI.AboutActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colortoolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/raleway"
            android:text="@string/title"
            android:textColor="@color/colorWhite"
            android:textSize="27.5sp" />


    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/about_solvadoku_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:background="@drawable/normal_green"
        android:fontFamily="@font/raleway"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/about_solvadoku_text"
        android:textColor="@color/colorGrey"
        android:textSize="22sp" />

    <LinearLayout
        android:id="@+id/github_elements_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/github_repo_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:fontFamily="@font/raleway"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="5dp"
            android:text="@string/github_repo_text"
            android:textColor="@color/colorGrey"
            android:textSize="19sp" />

        <ImageView
            android:id="@+id/github_repo_link"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:contentDescription="@string/contentDescriptionGitHubRepoButton"
            android:gravity="center"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:tag="https://github.com/yde773786/Solvadoku"
            app:srcCompat="@drawable/ic_github" />

    </LinearLayout>

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_gravity="bottom|center"
        android:layout_weight="0.1"
        app:srcCompat="@drawable/ic_solvadoku_circle_icon"
        android:contentDescription="@string/contentDescriptionSolvadokuIconAboutPage" />

    <TextView
        android:id="@+id/release_version_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.02"
        android:fontFamily="@font/majormono"
        android:text="@string/app_release_version"
        android:textColor="@color/colorGrey"
        android:textSize="12sp" />

</LinearLayout>