<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".UI.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colortoolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/raleway"
            android:text="@string/title"
            android:textColor="@color/colorWhite"
            android:textSize="27sp" />


    </androidx.appcompat.widget.Toolbar>

    <com.yde.solvadoku.UI.Grids.SudokuGrid
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.6"
        android:focusableInTouchMode="true"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        app:columnCount="9"
        app:rowCount="9" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.55"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.gridlayout.widget.GridLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:scaleType="centerCrop"
                app:columnCount="3"
                app:layout_constraintDimensionRatio="3:4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:rowCount="4">

                <Button
                    android:id="@+id/one"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/button_number_key"
                    android:fontFamily="@font/majormono"
                    android:text="@string/_1"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    app:layout_column="0"
                    app:layout_columnWeight="0.33"
                    app:layout_row="0"
                    app:layout_rowWeight="0.33" />

                <Button
                    android:id="@+id/two"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/button_number_key"
                    android:fontFamily="@font/majormono"
                    android:text="@string/_2"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    app:layout_column="1"
                    app:layout_columnWeight="0.33"
                    app:layout_row="0"
                    app:layout_rowWeight="0.33" />

                <Button
                    android:id="@+id/three"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/button_number_key"
                    android:fontFamily="@font/majormono"
                    android:text="@string/_3"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    app:layout_column="2"
                    app:layout_columnWeight="0.33"
                    app:layout_row="0"
                    app:layout_rowWeight="0.33" />

                <Button
                    android:id="@+id/four"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/button_number_key"
                    android:fontFamily="@font/majormono"
                    android:text="@string/_4"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    app:layout_column="0"
                    app:layout_columnWeight="0.33"
                    app:layout_row="1"
                    app:layout_rowWeight="0.33" />

                <Button
                    android:id="@+id/five"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/button_number_key"
                    android:fontFamily="@font/majormono"
                    android:text="@string/_5"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    app:layout_column="1"
                    app:layout_columnWeight="0.33"
                    app:layout_row="1"
                    app:layout_rowWeight="0.33" />

                <Button
                    android:id="@+id/six"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/button_number_key"
                    android:fontFamily="@font/majormono"
                    android:text="@string/_6"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    app:layout_column="2"
                    app:layout_columnWeight="0.33"
                    app:layout_row="1"
                    app:layout_rowWeight="0.33" />

                <Button
                    android:id="@+id/seven"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/button_number_key"
                    android:fontFamily="@font/majormono"
                    android:text="@string/_7"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    app:layout_column="0"
                    app:layout_columnWeight="0.33"
                    app:layout_row="2"
                    app:layout_rowWeight="0.33" />

                <Button
                    android:id="@+id/eight"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/button_number_key"
                    android:fontFamily="@font/majormono"
                    android:text="@string/_8"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    app:layout_column="1"
                    app:layout_columnWeight="0.33"
                    app:layout_row="2"
                    app:layout_rowWeight="0.33" />

                <Button
                    android:id="@+id/nine"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/button_number_key"
                    android:fontFamily="@font/majormono"
                    android:gravity="center"
                    android:text="@string/_9"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    app:layout_column="2"
                    app:layout_columnWeight="0.33"
                    app:layout_row="2"
                    app:layout_rowWeight="0.33" />

                <ImageButton
                    android:id="@+id/clear_board"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/button_clear_board"

                    android:contentDescription="@string/contentDescriptionClearBoardButton"
                    android:padding="14dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_trash_icon"
                    app:layout_column="0"
                    app:layout_columnWeight="0.33"
                    app:layout_row="3"
                    app:layout_rowWeight="0.33" />

                <ImageButton
                    android:id="@+id/erase"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/button_function_key"

                    android:contentDescription="@string/contentDescriptionEraseButton"
                    android:padding="15dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_erase"
                    app:layout_column="1"
                    app:layout_columnWeight="0.33"
                    app:layout_row="3"
                    app:layout_rowWeight="0.33" />

                <ImageButton
                    android:id="@+id/next_cell"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/button_function_key"

                    android:contentDescription="@string/contentDescriptionNextCellButton"
                    android:padding="15dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_next"
                    app:layout_column="2"
                    app:layout_columnWeight="0.33"
                    app:layout_row="3"
                    app:layout_rowWeight="0.33" />

            </androidx.gridlayout.widget.GridLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.45"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="0.33"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/solve"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:background="@drawable/core_enabled"
                    android:fontFamily="@font/raleway"
                    android:text="@string/solve"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp" />

                <ImageButton
                    android:id="@+id/choose_strategies"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:background="@drawable/assist_enabled"
                    android:contentDescription="@string/contentDescriptionChooseStrategiesButton"
                    android:cropToPadding="true"
                    android:padding="12dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_dropdown_arrow_icon" />
            </LinearLayout>

            <Button
                android:id="@+id/check_steps"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="25dp"
                android:layout_weight="0.33"
                android:background="@drawable/secondary_enabled"
                android:fontFamily="@font/raleway"
                android:text="@string/steps"
                android:textColor="@color/colorWhite"
                android:textSize="25sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>